--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="mpm_title">Play with friends</string>
     <string name="the_quiz">The Quiz</string>
     <string name="go_back">Go Back</string>
+    <string name="start_question">Start Question</string>
 </resources>
