--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">The Bible Quiz</string>
-    <string name="spm_title">Play alone</string>
-    <string name="mpm_title">Play with friends</string>
-    <string name="the_quiz">The Quiz</string>
+    <string name="the_quiz_mode">The Quiz</string>
+    <string name="biblical_wordle">Biblical Wordle</string>
     <string name="go_back">Go Back</string>
     <string name="start_question">Start Question</string>
 </resources>
