--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="go_back">Go Back</string>
     <string name="start_question">Start Question</string>
     <string name="title_activity_splash_screen">The Bible Quiz</string>
+    <string name="reminder_channel">Reminder Channel</string>
 
 
     <string name="error_word_is_not_in_our_list">Word is not in our list.</string>
@@ -18,4 +19,5 @@
     <string name="feedback_you_are_already_friends_with_this_user">You are already friends with this user</string>
     <string name="feedback_you_have_already_sent_a_friend_request_to_this_user">You have already sent a friend request to this user</string>
     <string name="feedback_you_have_sent_a_friend_request">You have sent a friend request</string>
+    <string name="feedback_friend_removed">Friend Removed</string>
 </resources>
