--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="go_back">Go Back</string>
     <string name="start_question">Start Question</string>
     <string name="title_activity_splash_screen">The Bible Quiz</string>
-    <string name="reminder_channel">Reminder Channel</string>
+    <string name="reminder_channel">reminder_channel</string>
 
 
     <string name="error_word_is_not_in_our_list">Word is not in our list.</string>
