--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,18 @@
     <string name="feedback_you_have_sent_a_friend_request">You have sent a friend request</string>
     <string name="feedback_friend_removed">Friend Removed</string>
     <string name="feedback_question_suggestion_sent">Question Suggestion was sent successfully</string>
+    <string name="feedback_friend_invitation">Friend(s) invited.</string>
+    <string name="feedback_question_league_created">League Created Successfully</string>
     <string name="question_suggestion_bible_verse_details">If bible verse does not apply just write N/A. Eg: If you ask \'What is the last book of the bible\', that does not have an specific bible verse with the answer.</string>
     <string name="question_suggestion_created_by_details">We will credit you if your answer is selected.</string>
+    <string name="weekly">Weekly</string>
+    <string name="two_weeks">Two Weeks</string>
+    <string name="monthly">Three Months</string>
+    <string name="three_months">Three Months</string>
+    <string name="six_months">Six Months</string>
+    <string name="yearly">Yearly</string>
+    <string name="no_end">No End</string>
+    <string name="quiz_only">Quiz Only</string>
+    <string name="wordle_only">Wordle Only</string>
+    <string name="quiz_and_wordle">Quiz and Worlde</string>
 </resources>
