--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -27,6 +27,7 @@
     <string name="feedback_league_updated">Liga atualizada</string>
     <string name="feedback_no_change">Não há mudanças</string>
     <string name="feedback_image_updated">Imagem atualizada</string>
+    <string name="feedback_user_premium">Agora você é um membro Premium</string>
     <string name="feedback_question_league_created">Liga creada com sucesso</string>
     <string name="question_suggestion_bible_verse_details">Se o verso da Bíblia não for aplicável, então apenas coloque \'N/A\'. Por exemplo, caso sua pergunta seja algo como \'Qual é o último livro da Bíblia?\' - A resposta dessa pergunta não está em um versículo específico.</string>
     <string name="question_suggestion_created_by_details">Vamos te dar o crédito pela criação da pergunta.</string>
@@ -58,5 +59,8 @@
     <string name="rate">Avalie</string>
     <string name="share">Compartilhe</string>
     <string name="correct_answer">"Resposta Correta: "</string>
+    <string name="suggest_a_question">Sugira uma pergunta</string>
+    <string name="how_to_play">Como jogar</string>
+    <string name="get_premium">Obtenha Premium</string>
 
 </resources>
