Fixing MANY things regarding leagues ~ Help with League Persistence, Add League Deletion ~ Postpone the release of League Logs ~ Creation of a Basic Dialog ~ Fixing to stop listening to the session if the user logs out ~ Added a basic loading to the BasicScreenBox ~ Fixing How to Add user to Leagues ~

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,5 +62,6 @@
     <string name="suggest_a_question">Suggest a question</string>
     <string name="how_to_play">How to play</string>
     <string name="get_premium">Get Premium</string>
+    <string name="league_was_deleted">League was deleted</string>
 
 </resources>
