--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -7,7 +7,6 @@
     <string name="title_activity_splash_screen">The Bible Quiz</string>
     <string name="bible_verse">"Verso Bíblico: "</string>
     <string name="selected_answer">"Resposta Escolhida: "</string>
-    <string name="reminder_channel">reminder_channel</string>
 
 
     <string name="error_word_is_not_in_our_list">A palavra não está em nossa lista</string>
@@ -54,7 +53,7 @@
     <string name="verse_of_the_day">Verso do dia</string>
     <string name="daily_bible_quiz">Quiz Bíblico\nDiário</string>
     <string name="biblical_wordle_home">Wordle\nBíblico</string>
-    <string name="profile">Profile</string>
+    <string name="profile">Perfil</string>
     <string name="login_with_google">Logar com Google</string>
     <string name="rate">Avalie</string>
     <string name="share">Compartilhe</string>
@@ -62,5 +61,55 @@
     <string name="suggest_a_question">Sugira uma pergunta</string>
     <string name="how_to_play">Como jogar</string>
     <string name="get_premium">Obtenha Premium</string>
+    <string name="league_was_deleted">Liga foi deletada</string>
+    <string name="change_it">Mudar</string>
+    <string name="select_your_icon">Escolha o seu ícone</string>
+    <string name="yes">Sim</string>
+    <string name="no">Não</string>
+    <string name="warning">Atenção</string>
+    <string name="emptyString" />
+    <string name="league_changes">Mudanças na Liga</string>
+    <string name="are_you_sure">Are you sure you want to make these changes? If you continue, all the points will be reset to zero</string>
+    <string name="delete_league">Deletar Liga?</string>
+    <string name="are_you_sure_you_want_to_delete_this_league">Você tem certeza que quer deletar essa liga?</string>
+    <string name="league_resetting_cycle">Ciclo para resetar os pontos:</string>
+    <string name="league_settings">Configurações da Liga:</string>
+    <string name="league_points">Pontos da Liga:</string>
+    <string name="date_for_recycle">Data que os pontos vão ser resetados: %1$s</string>
+    <string name="save">Atualizar</string>
+    <string name="friends_you_can_add_to_this_league">Amigos que você pode adicionar nesta liga</string>
+    <string name="you_don_t_have_any_friends_that_could_be_added">Você não tem amigos que possam ser adicionados</string>
+    <string name="send_invitation">Enviar convite</string>
+    <string name="first_place">Primeiro lugar</string>
+    <string name="second_place">Segundo Lugar</string>
+    <string name="points">%1$s Ponto(s)</string>
+    <string name="third_place">Terceiro Lugar</string>
+    <string name="place">%1$s° Place</string>
+    <string name="p">%1$sP</string>
+    <string name="add_a_friend">Adicione um amigo</string>
+    <string name="add_user">Adicionar usuário</string>
+    <string name="friend_removal">Remover amigo</string>
+    <string name="are_you_sure_you_want_to_remove_this_friend">Você tem certeza que você quer remover esse amigo?</string>
+    <string name="logout">Sair</string>
+    <string name="go_back_to_your_profile">Voltar ao seu perfil</string>
+    <string name="premium_user">Conta Premium</string>
+    <string name="non_premium_user">Conta não Premium</string>
+    <string name="leagues">Ligas</string>
+    <string name="create_a_new_league_hold">Crie uma nova Liga (Segure)</string>
+    <string name="leagues_invitations">Convites para ligas</string>
+    <string name="your_leagues">Suas Ligas</string>
+    <string name="friend_requests">Pedidos de Amizade</string>
+    <string name="friends">Amigos</string>
+    <string name="add_new_friend">Adicione um novo amigo</string>
+    <string name="i_want_to_share_this_verse_with_you">Quero compartilhar este verso com você:\n\n%1$s\n\n%2$s</string>
+    <string name="choose_where_you_re_sharing_this">Escolha onde você quer compartilhar</string>
+    <string name="total">Total</string>
+    <string name="easy">EASY/</string>
+    <string name="medium">MEDIUM/</string>
+    <string name="hard">HARD/</string>
+    <string name="impossible">IMPOSSIBLE/</string>
+    <string name="days_in_streak">Days in streak</string>
+    <string name="how_to_play_the_bible_quiz">How to play The Bible Quiz?</string>
+    <string name="bible_quiz_description">Neste jogo, Você tem 30 segundos para responder uma pergunta. Poderá escolher uma dentre quatro respostas. Temos 4 dificuldades. Elas são:\n\n- Fácil\n- Médio\n- Difícil\n- Impossível\n\nVocê só tem uma change de responder. Responda com sabedoria.</string>
 
 </resources>
