--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,5 +116,8 @@
     <string name="days_in_streak">Days in streak</string>
     <string name="how_to_play_the_bible_quiz">How to play The Bible Quiz?</string>
     <string name="bible_quiz_description">In this game, you have 30 seconds to answer one question. You can choose 1 out of 4 answers. There are 4 difficulties in this game. They are:\n\n- Easy\n- Medium\n- Hard\n- Impossible\n\nIt is only one questions per day and you only have one try. Answer it wisely.</string>
+    <string name="leave_league">Leave League</string>
+    <string name="are_you_sure_you_want_to_leave_this_league">Are you sure you want to leave this League? You will lose any point you\'ve gained</string>
+    <string name="you_ve_left_the_league_successfully">You\'ve left the League successfully</string>
 
 </resources>
