~ New things for the app

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -135,4 +135,5 @@
     <string name="you_still_have_no_friends">Você ainda não tem amigos :(</string>
     <string name="bible">Bible</string>
     <string name="family">Family</string>
+    <string name="hi_we_should_play_the_bible_quiz_together">E aí? Bora jogar The Bible Quiz Junto? Baixa aí :D\n\nhttps://play.google.com/store/apps/details?id=com.bsoftwares.thebiblequiz</string>
 </resources>
