--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -7,8 +7,6 @@
     <string name="title_activity_splash_screen">The Bible Quiz</string>
     <string name="bible_verse">"Verso Bíblico: "</string>
     <string name="selected_answer">"Resposta Escolhida: "</string>
-
-
     <string name="error_word_is_not_in_our_list">A palavra não está em nossa lista</string>
     <string name="error_network_issue">Parece que estamos tendo alguns poblemas com a internet, tente novamente mais tarde.</string>
     <string name="error_word_not_long_enough">Tem que ter pelo menos %1$d letras</string>
@@ -136,4 +134,17 @@
     <string name="bible">Bible</string>
     <string name="family">Family</string>
     <string name="hi_we_should_play_the_bible_quiz_together">E aí? Bora jogar The Bible Quiz Junto? Baixa aí :D\n\nhttps://play.google.com/store/apps/details?id=com.bsoftwares.thebiblequiz</string>
+    <string name="the_boss_around_here">O chefe das áreas</string>
+    <string name="understandable_have_a_great_day">Entendível, tenha um ótimo dia</string>
+    <string name="i_am_a_new_creature_of_god">Nova criatura</string>
+    <string name="the_last_animal_of_moses_ark">O último animal da arca de moisés</string>
+    <string name="i_m_not_a_prophet_but_i_know_i_m_gonna_win">Não sou um profeta, mas eu sei que vou ganhar</string>
+    <string name="paul_was_right_about_you">Paulo estava certo sobre você</string>
+    <string name="stephen_deserved_a_spin_off">Estevão merecia um spin-off</string>
+    <string name="how_is_the_view_from_down_there">↓ Como é a vista aí debaixo? ↓</string>
+    <string name="new_league_name">Sua nova Liga</string>
+    <string name="your_title_was_updated">Your Title was updated</string>
+    <string name="by_the_grace_of_god">Pela graça de Deus</string>
+    <string name="update_your_title">Atualize o seu título</string>
+    <string name="update">Atualizar</string>
 </resources>
