--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="no_end">No End</string>
     <string name="quiz_only">Quiz Only</string>
     <string name="wordle_only">Wordle Only</string>
-    <string name="quiz_and_wordle">Quiz and Worlde</string>
+    <string name="quiz_and_wordle">Quiz and Wordle</string>
 
     <!-- Icons Strings -->
     <string name="icon_shield_cross">Shield with cross</string>
@@ -108,10 +108,10 @@
     <string name="i_want_to_share_this_verse_with_you">I want to share this verse with you:\n\n%1$s\n\n%2$s</string>
     <string name="choose_where_you_re_sharing_this">Choose where you\'re sharing this</string>
     <string name="total">Total</string>
-    <string name="easy">EASY/</string>
-    <string name="medium">MEDIUM/</string>
-    <string name="hard">HARD/</string>
-    <string name="impossible">IMPOSSIBLE/</string>
+    <string name="easy_stats">EASY/</string>
+    <string name="medium_stats">MEDIUM/</string>
+    <string name="hard_stats">HARD/</string>
+    <string name="impossible_stats">IMPOSSIBLE/</string>
     <string name="days_in_streak">Days in streak</string>
     <string name="how_to_play_the_bible_quiz">How to play The Bible Quiz?</string>
     <string name="bible_quiz_description">In this game, you have 30 seconds to answer a single question. Choose the correct answer from 4 options. The game offers 4 difficulty levels:\n\n- Easy\n- Medium\n- Hard\n- Impossible\n\nYou can only attempt one question per day, and you have just one chance to get it right. Choose wisely!</string>
@@ -152,4 +152,18 @@
     <string name="by_the_grace_of_god">By the grace of God</string>
     <string name="update_your_title">Update your title</string>
     <string name="update">Update</string>
+    <string name="question_text">Question Text</string>
+    <string name="this_field_is_required">This field is required</string>
+    <string name="correct_answer_text">Correct Answer Text</string>
+    <string name="send_question_hold">Send question (Hold)</string>
+    <string name="your_name">Your name</string>
+    <string name="select_difficulty">Select Difficulty</string>
+    <string name="first_wrong_answer">First Wrong Answer</string>
+    <string name="second_wrong_answer">Second Wrong Answer</string>
+    <string name="third_wrong_answer">Third Wrong Answer</string>
+    <string name="bible_verse_with_the_answer">Bible verse with the answer</string>
+    <string name="easy">Easy</string>
+    <string name="medium">Medium</string>
+    <string name="hard">Hard</string>
+    <string name="impossible">Impossible</string>
 </resources>
